# HWR_QM_DOE

./: .gitignore  CLAUDE.md  DMAIC_Katapult_Versuch.ipynb  README.md  helper.py  msa_template_generator.py
catapult/: README.md  pyproject.toml
catapult/src/statapult/: __init__.py  __main__.py  cli.py  config.py  defaults.yaml  excel_filler.py  factors.py  io_utils.py  noise.py  physics.py  simulator.py
catapult/tests/: test_cli.py  test_excel_filler.py  test_factors.py  test_integration.py  test_noise.py  test_physics.py  test_simulator.py  test_statistical_properties.py
scripts/: build_notebook.py
scripts/notebook_builder/: analyze.py  cells.py  closing.py  control.py  define.py  improve.py  intro.py  measure.py
tests/: conftest.py  test_analyze.py  test_annaeherung 2.py  test_annaeherung.py  test_control.py  test_define.py  test_e2e.py  test_excel_konsistenz.py  test_improve.py  test_measure.py  test_persistence.py  virtuelle_gruppe.py
